Transferred changes from RavenDB Benchmark